2009-12-02  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/EvaluationOptions.cs:
	* Mono.Debugging.Evaluation/TypeValueReference.cs:
	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: By default,
	  don't group private members for user classes.

2009-12-02  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.Debugging.csproj:
	* Mono.Debugging.Client/ObjectValueFlags.cs:
	* Mono.Debugging.Evaluation/RawViewSource.cs:
	* Mono.Debugging.Client/EvaluationOptions.cs:
	* Mono.Debugging.Evaluation/ValueReference.cs:
	* Mono.Debugging.Evaluation/TypeValueReference.cs:
	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs:
	* Mono.Debugging.Evaluation/BaseTypeViewSource.cs:
	* Mono.Debugging.Evaluation/FilteredMembersSource.cs: Added
	  new evaluation options. Grouping non-public and static
	  members is now optional. Added option for grouping members
	  from base classes in a base group. When disabled, show the
	  base class next to the member name when there are several
	  members with the same name.

2009-12-01  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs: Added
	  several missing type and null checks.

2009-11-30  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Prettify
	  type names.

2009-11-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/StackFrame.cs: A frame should be
	  marked external when file name IS empty.

	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Improve
	  error handling.

2009-11-24  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.Debugging.Client/StackFrame.cs: Add property for
	  flagging frame as external code.

2009-11-20  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.Debugging.Client/DebuggerSessionOptions.cs: Add setting
	  for user-code-only debugging.

2009-11-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Fix calls