@@ -1,3 +1,9 @@
+2009-12-02  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Mono.Debugging.Client/DebuggerSession.cs: If there's an
+	  exceptions when running, attaching, or finishing, exit the
+	  session, instead of just stopping it.
+
 2009-12-02  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Mono.Debugging.Client/EvaluationOptions.cs:
